# rule_score_auto_adjust

./: .gitignore  000_get_top_k_apks.py  001_prepare_dataset.py  002_get_subset.py  adjust_rule_score.py  analysis_result_converter.py  apk_prediction.csv  build_release_rule_to_quark_rules.py  common.py  create_rule_folder.py  default_rules.csv  download_and_analyze_apk.py  generate_behavior_map.py  generate_rule_description.py  generate_rule_reviews.py  get_specified_family_apks.py  group_behavior_map_by_families.py  main.py  main_ray.py  overall.excalidraw  prepare_for_rule_releasing.py  pyproject.toml  requirements.txt  rule_score_auto_adjust.code-workspace  rule_score_auto_adjust_haeter.code-workspace  run_quark_on_apks_and_rules.py  selected_rule_for_ai_0.2.csv  selected_rule_for_releasing.csv  selected_rule_for_releasing_0.2.csv  selected_rule_from_ai_0.2.csv  tcheckPassing54.py  tcheckPassing54_dask.py  tcheckPassing54_move_rule.py  tune_ai.py
data/dataset/: dataset.csv
data_preprocess/: analysis_result.py  apk.py  apk_list.py  behavior_map.py  dataset.py  rule.py  virus_total.py  virust_total.py
manually_saved_model/: 0429_acc_84
model/: __init__.py
scripts/: run_mlflow_server.sh  run_prefect_server.sh
tests/: test_model.py
tools/: adjust_rule_score.py  analyze_apk.py  apply_rule_info.py  collect_apk_by_family.py  collect_rule_info.py  collect_rule_to_folder.py  copy_rule_to_quark_rules.py  download_apk.py  generate_behavior_map.py  generate_rule_description.py  generate_rules.py
tools/backup/: 000_get_top_k_apks.py  001_prepare_dataset.py  (+9 more)
(+1 files in other folders)
